[tool.poetry]
name = "extensions-postgres"
version = "0.1.0"
description = ""
authors = ["Matias Wallenius <MatiWall@live.dk>"]
readme = "README.md"

# Add your private repository
[[tool.poetry.source]]
name = "your-private-repo"
url = "http://pypi.mw/simple"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.9"
pandas = "^2.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
